2010-09-20	Regis Balzard <rbalzard@inverse.ca>
	* pf/lib/pf/SNMP/Nortel/BayStack4500.pm: removed this file 

	* pf/lib/pf/SNMP/Nortel/ERS4500.pm: added this file

	* pf/README_SWITCHES, pf/html/admin/configuration/switches_add.php, 
	pf/html/admin/configuration/switches_edit.php, pf/t/critic.t, 
	pf/t/hardware-snmp-objects.t, pf/t/pod.t: Fixed the error in the 4500 module 
	name (was originally named BayStack 4500 but it is actually ERS 4500).

2010-09-17	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/conf/dhcp_fingerprints.conf: Fixed Siemens optiPoint WL2 
	Professional fingerprint.

	* pf/html/admin/common.php, pf/lib/pf/pfcmd.pm: pfcmd's node filters now
	supports arguments with spaces as long as they are double-quoted. 
	Viewing nodes per category on the admin interface was updated to use 
	this facility. Fixes #1056;
	http://www.packetfence.org/bugs/view.php?id=1056

	* pf/html/admin/common.php, pf/html/admin/node/view.php: Table 
	refreshes now re-do a count so paging in node table doesn't brake on
	deletions. Fixes #1055;
	http://www.packetfence.org/bugs/view.php?id=1055

2010-09-17	Regis Balzard <rbalzard@inverse.ca>
	* pf/lib/pf/SNMP/Nortel/ERS2500.pm, pf/README_SWITCHES, 
	pf/html/admin/configuration/switches_add.php,
	pf/html/admin/configuration/switches_edit.php, pf/t/critic.t, 
	pf/t/hardware-snmp-objects.t, pf/t/pod.t: Added support for Nortel ERS 
	2500 Series.

2010-09-17	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/SNMP/Extreme/Summit.pm, 
	pf/lib/pf/SNMP/Extreme/Summit_X250e.pm, pf/lib/pf/SNMP/Extreme.pm, 
	pf/html/admin/configuration/switches_add.php,
	pf/html/admin/configuration/switches_edit.php: 
	Re-worked port-security (MAC address Lockdown) support and added Voice
	over IP support for Extreme XOS. We removed the CLI requirement making
	it a production ready module. Thanks to Extreme Networks for sponsoring
	the feature and adding features to their ExtremeXOS making this 
	possible.

2010-09-17	Regis Balzard <rbalzard@inverse.ca>