@@ -9,6 +9,9 @@ use warnings;
 
 use constant INSTALL_DIR => '/usr/local/pf';
 use lib INSTALL_DIR . "/lib";
+# required for dynamically loaded authentication modules
+use lib INSTALL_DIR . "/conf";
+
 use pf::config;
 use pf::iplog;
 use pf::util;
